# OpenGLCourse

./: 1  CMakeLists.txt  README.md  todo.md
exercises/01_Context/: CMakeLists.txt  app.cpp  app.hpp
exercises/02_Shaders/: CMakeLists.txt  app.cpp  app.hpp
exercises/03_Buffers/: CMakeLists.txt  app.cpp  app.hpp
exercises/04_Display/: CMakeLists.txt  app.cpp
exercises/05_Matrices/: CMakeLists.txt  app.cpp  app.hpp
include/s9/: visualapp.hpp
include/s9/gl/: glfw_app.hpp
lib/linux64/: libglfw.so.3.0
lib/osx/: libglfw3.dylib
shaders/1.5/: passthru.glsl
shaders/es/: basic.frag
src/gl/: glfw_app.cpp
